# raspberrypi

./: .gitignore  MakeReverseSshTunnel.sh  ObtainMeasurements.txt  install.py  install.sh  main.py  reversessh-swiss.service  reversessh.service  rustfmt.toml  sensorcloud.py  setup_3g_4g.service  setup_3g_4g.timer  setup_3g_4g.txt  setup_3g_4g_on_boot.timer  thermo.py  thermo.service  update_thermo.service  update_thermo.timer
gc/: main.py
google_functions/: README.md  big_query.py  bots.py  main.py  metrics.py  requirements.txt  telemetry_processor.py
google_functions_v2/: README.md  alerting.py  bigquerydb.py  bot_alerting.py  bot_notifier.py  chat_id_db.py  devicedatum.py  ingest.py  logger.py  main.py  plot.py  requirements.txt  sender.py  sensor.py  sensor_db.py  sensors_db_bg.py  sensors_db_fake.py  stdout_sender.py  telegram_sender.py  test_alerting.py  test_bot_notifier.py  test_chat_id_db.py  test_create_msg.py  test_devicedatum.py  test_ingest.py  test_sender.py  test_sensor_db.py  test_sensor_db_bq.py  test_sensor_db_fake.py  topic.py
learning/grpc-server-client/: Cargo.toml
learning/grpc-server-client/client/: Cargo.toml
learning/grpc-server-client/client/src/: main.rs
learning/grpc-server-client/proto/: Cargo.toml  build.rs  route_guide.proto
learning/grpc-server-client/proto/src/: generated.rs
learning/grpc-server-client/server/: Cargo.toml
learning/grpc-server-client/server/src/: lib.rs  main.rs
old_thermo_rust/sensors/: Cargo.toml
old_thermo_rust/sensors/src/: lib.rs
old_thermo_rust/thermo/: Cargo.toml
old_thermo_rust/thermo/src/: http_sink.rs  jwt_updater.rs  sink.rs
thermo/: CMakeLists.txt  ParseTemp.cpp  ParseTemp.h  README.md  TDriver.cpp  TDriver.h  TGCMqtt.cpp  TGCMqtt.h  TJwt.cpp  TJwt.h  TJwt_p.h  TMinMaxTracker.h  TSmsCategoryIds.h  TSmsSender.cpp  TSmsSender.h  TTempPoller.cpp  TTempPoller.h  main.cpp  thermo.qbs
thermo/CMake/: subproject_builder.cmake
thermo/app/: CMakeLists.txt  main.cpp
thermo/contrib/: CMakeLists.txt
thermo/lib/: CMakeLists.txt  ISink.cpp  ISink.h  MakeUnique.h  TDriver.cpp  TGCMqtt.h  TGCMqttSink.cpp  TGCMqttSink.h  THttpSink.cpp  THttpSink.h  TJwt.cpp  TJwt.h  TJwtUpdater.cpp  TJwtUpdater.h  TJwt_p.h  TPublishItem.cpp  TPublishItem.h  TSensorPoller.cpp  TSensorPoller.h  TSensorsPoller.cpp  TSensorsPoller.h  TTempPoller.cpp  TTempPoller.h  TTempPollers.cpp  TTempPollers.h  memory.h
thermo/lib/ut/: CMakeLists.txt  THttpSink.t.cpp  TJwt.t.cpp  TJwtUpdater.t.cpp
thermo/test/: main.py
thermo_rust/: Cargo.toml  install.py  rustfmt.toml
thermo_rust/agg/: Cargo.toml
thermo_rust/agg-proto/: Cargo.toml  agg.proto  build.rs
thermo_rust/agg-proto/src/: generated.rs
thermo_rust/agg/src/: main.rs
thermo_rust/common/: Cargo.toml  agg.proto  build.rs
thermo_rust/common/src/: lib.rs  tls.rs
thermo_rust/helpers/: Cargo.toml
thermo_rust/helpers/src/: helpers.rs
thermo_rust/sensor/: Cargo.toml
thermo_rust/sensor/src/: ingest.rs  lib.rs  main.rs  publisher.rs  sensor.rs
thermo_rust/sensors/: Cargo.toml
thermo_rust/sensors/src/: DS18B20.rs  lib.rs
thermo_rust/server/: Cargo.toml
thermo_rust/server/src/: alerting.rs  cli.rs  consumer.rs  cron.rs  db.rs  grpc.rs  lib.rs  main.rs  message.rs  plot.rs  sender.rs  sensor.rs
thermo_rust/server/src/cli/: config.rs  serve.rs  tls.rs
thermo_rust/server/src/db/: measurement.rs  sensor.rs
thermo_rust/thermo/: Cargo.toml
thermo_rust/thermo/src/: http_sink.rs  jwt_updater.rs  lib.rs  main.rs  sensor_poller.rs  sensors_poller.rs  sink.rs
