[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "*"
prost = "*"
prost-types = "*"
tokio                 = { version = "1"  , features = ["full"]                                 }
anyhow                = { version = "1.0", features = ["backtrace"]                            }
env_logger            = { version = "0.10"                                                     }

[build-dependencies]
tonic-build = "*"

[dev-dependencies]
pretty_assertions     = { version = "1"                                                        }
