cargo-features = ["profile-rustflags"]

[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = 2  # Include debug information even in release builds


[dependencies]
agg-proto             = { path = "../agg-proto"                                                 }
helpers               = { path = "../helpers"                                                   }

# poison_pill           = { version = "0.1"                                                      }
anyhow                = { version = "1.0", features = ["backtrace"]                            }
stdext                = { version = "0.3"                                                      }
ctrlc                 = { version = "3.4"                                                      }
clap                  = { version = "4", features = ["derive"]                                 }
env_logger            = { version = "0.10"                                                     }
log                   = { version = "0.4"                                                      }
chrono                = { version = "0.4"                                                      }
time                  = { version = "0.3", features = ["parsing"]                              }
tokio                 = { version = "1"  , features = ["full"]                                 }
tokio-stream          = { version = "0.1", features = ["fs"]                                   }
tokio-util            = { version = "0.7", features = ["io"]                                   }
async-stream          = { version = "0.3"                                                      }
tonic                 = { version = "*"                                                     }
# futures = {version = "0.3" }



[dev-dependencies]
pretty_assertions     = { version = "1"                                                        }
