cargo-features = ["profile-rustflags"]

[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = 2  # Include debug information even in release builds


[dependencies]
common                = { path = "../common"                                                   }

tonic                 = { version = "*"                                                     }
async-trait           = "*"
# poison_pill           = { version = "0.1"                                                      }
anyhow                = { version = "1.0", features = ["backtrace"]                            }
stdext                = { version = "0.3"                                                      }
ctrlc                 = { version = "3.4"                                                      }
clap                  = { version = "4", features = ["derive"]                                 }
env_logger            = { version = "0.10"                                                     }
log                   = { version = "0.4"                                                      }
chrono                = { version = "0.4"                                                      }
time                  = { version = "0.3", features = ["parsing"]                              }
tokio                 = { version = "1"  , features = ["full"]                                 }
tokio-stream          = { version = "0.1", features = ["fs"]                                   }
tokio-util            = { version = "0.7", features = ["io"]                                   }
reqwest               = { version = "0.11", features = ["json", "multipart"]                   }
serde                 = { version = "1.0", features = ["derive"]                               }
serde_repr            = { version = "0.1"                                                      }
serde_yaml            = { version = "0.9"                                                      }
serde_with            = { version = "3.4", features = ["base64"]                               }
url                   = { version = "2.5", features = ["serde"]                                }
plotters              = { version = "0.3" }
serde_json            = { version = "1.0", default-features = false, features = ["alloc"] }
async-stream          = "*"
futures               = "*"
image                 = "0.24"
http                  = "*"
chrono-tz             = "0.6"

[dev-dependencies]
pretty_assertions     = { version = "1"                                                        }
once_cell             = "1.18.0"
