[package]
name = "thermo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
timer = "0.2.0"
crossbeam-channel = "0.5.6"
ctrlc = "3.2.4"
stdext = "0.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sensors = { path = "../sensors" }
